creusot/tests/should_fail/array.stderr
error: Unsupported expression: Array
 --> array.rs:9:12
  |
9 | #[requires([0, 1, 2, 3] == x)]
  |            ^^^^^^^^^^^^

error: Unsupported expression: Repeat
  --> array.rs:13:12
   |
13 | #[requires([0; 4] == x)]
   |            ^^^^^^

error: aborting due to 2 previous errors

